@@ -6,7 +6,7 @@ date_create() function [2]
 <?php
 date_default_timezone_set("GMT");
 $d = date_create("2005-07-18 22:10:00 +0400");
-echo $d->format(DATE_RFC822), "\n";
+echo $d->format(date::RFC822), "\n";
 ?>
 --EXPECT--
 Mon, 18 Jul 2005 22:10:00 GMT+0400
